Backported my phone number from CM7
Change-Id: I879a8e810738e1d98dc762c848925981f4c3bdeb

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1435,4 +1435,8 @@
     <string translatable="false" name="advanced_settings_container">advanced settings container</string>
     <string translatable="false" name="auth_username">AuthUserName</string>
     <!-- End of SIP settings related strings -->
+
+    <string name="phone_number_label">My phone number</string>
+    <string name="phone_number_summary">Set the phone number for this device</string>
+
 </resources>
